# forge

./: .codeforge.db  .forgerc  .gitignore  .task-450.md  .task-461.md  .task-517.md  .task-549.md  .task-552.md  Cargo.toml  EXECUTION-PLAN.md  LICENSE  PROJECT_ANALYSIS.md  PR_TEMPLATES.md  README.md  RESTRUCTURE-PLAN.md  SIMPLIFY-PLAN.md  Shuttle.toml  TASK_LIST_PR_912_ARCHITECTURE_REVIEW.md  ci.rs  deprecate-instructions.md  forge.default.yaml  forge.schema.json  forge.toml  forge.yaml  forge_repomap_analysis.md  insta.yaml  install.sh  instructions.md  knowledge_workflow.yaml  package-lock.json  permission_spec.md  permission_system_todos.md  prd-verification-workflow.yaml  prd.md  pull-request-todo-done.diff  pull-request-todo-remove.diff  pull-request-todo.diff  pull-request.diff  repomix-output.md  review.yaml  (+13 more)
crates/forge_anthropic/: Cargo.toml
crates/forge_anthropic/src/: anthropic.rs  lib.rs  request.rs  response.rs  stream_response.rs
crates/forge_anthropic/src/snapshots/: forge_anthropic__anthropic__tests__request_conversion.snap
crates/forge_code/: Cargo.toml
crates/forge_code/src/: code.rs  lib.rs  linux.rs  macos.rs  platform.rs  unix.rs  vs_code.rs
crates/forge_desktop/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  vite.config.ts
crates/forge_desktop/src/: App.tsx  index.css  lib.rs  main.rs  main.tsx  tiptap-suggestion.css  tiptap.css
crates/forge_desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/forge_desktop/src-tauri/capabilities/: default.json
crates/forge_desktop/src-tauri/src/: commands.rs  file_commands.rs  lib.rs  main.rs
crates/forge_desktop/src/components/: ChatView.tsx  ConversationHeader.tsx  CustomUserButton.tsx  DiffModalView.tsx  DirectoryView.tsx  DocumentView.tsx  FileChangesBrowser.tsx  FileSuggestion.tsx  FileSuggestionExtension.tsx  FileTag.tsx  FileTagNode.tsx  FileTags.tsx  FileViewerModal.tsx  FloatingDirectoryView.tsx  Invitation.tsx  InvitedOnly.tsx  LoadingScreen.tsx  Login.tsx  MessageInput.tsx  ModeSwitcher.tsx  ProjectSelectionView.tsx  ProjectSwitcher.tsx  SignUp.tsx  StatusBar.tsx  ThemeSwitcher.tsx  TipTapEditor.tsx  ToolCallView.tsx  ToolConsoleView.tsx  TreeItem.tsx  UserButton.tsx  WaitListed.tsx
crates/forge_desktop/src/contexts/: ForgeContext.tsx  ProjectContext.tsx
crates/forge_desktop/src/hooks/: useInviteCode.ts  useOnboarding.ts  useRedeemInviteCode.ts
crates/forge_desktop/src/lib/: diffUtils.ts  filePathUtils.tsx  messageUtils.ts  utils.ts
crates/forge_display/: Cargo.toml
crates/forge_display/src/: diff.rs  grep.rs  lib.rs  markdown.rs  title.rs  vscode_diff.rs
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: agent.rs  agent_tests.rs  api.rs  arena.rs  attachment.rs  auth_service.rs  breakpoint.rs  buffer.rs  call_record.rs  chat_request.rs  chat_response.rs  chat_stream_ext.rs  command.rs  compact.rs  compaction.rs  compaction_result.rs  compaction_strategy.rs  config.rs  context.rs  context_ext.rs  conversation.rs  conversation_html.rs  conversation_style.css  dispatch_event.rs  domain.rs  embedding.rs  env.rs  environment.rs  errata.rs  error.rs  event.rs  file.rs  forge_config.rs  functional_req.rs  global_config.rs  ide.rs  image.rs  integer.rs  knowledge.rs  learning.rs  (+60 more)
crates/forge_domain/templates/: conversation.hbs
crates/forge_domain/tests/: workflow.rs
crates/forge_gateway/: Cargo.toml
crates/forge_gateway/src/: config.rs  error.rs  lib.rs
crates/forge_gateway/tests/: api.rs  api_key_repository.rs  auth_service.rs
crates/forge_indexer/: Cargo.toml
crates/forge_indexer/src/: indexer.rs  lib.rs  orchestrator.rs  token_counter.rs
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: auth.rs  buffer_service.rs  command_executor.rs  conn.rs  console.rs  conversation.rs  dir_create.rs  embedding.rs  env.rs  executor.rs  forge_infra.rs  fs.rs  fs_create_dirs.rs  fs_meta.rs  fs_read.rs  fs_remove.rs  fs_snap.rs  fs_undo.rs  fs_write.rs  indexer.rs  infra.rs  inquire.rs  knowledge.rs  lib.rs  mcp_client.rs  mcp_server.rs  qdrant.rs  schema.rs  task_service.rs  walker.rs  workflow.rs  workflows.rs
crates/forge_language/: Cargo.toml
crates/forge_language/src/: error.rs  language.rs  lib.rs  parser.rs  query.rs  registry.rs
crates/forge_main_neo/: .forge_history  Cargo.toml
crates/forge_main_neo/src/: action.rs  command.rs  entrypoint.rs  event_reader.rs  execute_interval.rs  executor.rs  lib.rs  main.rs  model.rs  run.rs
crates/forge_merger/: Cargo.toml  README.md
crates/forge_merger/src/: lib.rs  merger.rs  shard.rs  token_estimator.rs
crates/forge_oauth/: Cargo.toml
crates/forge_oauth/src/: callback.rs  error.rs  example.rs  lib.rs  oauth.rs  user_info.rs
crates/forge_open_ai/: Cargo.toml
crates/forge_open_ai/src/: lib.rs  lift.rs  open_ai.rs  request.rs  response.rs
crates/forge_rag/: Cargo.toml
crates/forge_rag/src/: language.rs  lib.rs
crates/forge_repomap/: Cargo.toml  README.md
crates/forge_repomap/src/: analyser.rs  error.rs  graph.rs  helpers.rs  lib.rs  parser.rs  ranking.rs  repo_map.rs  scope_walker.rs  symbol.rs  tests.rs  token.rs  tree_walker.rs  types.rs
crates/forge_review_v2/: Cargo.toml
crates/forge_review_v2/src/: functional_req.rs  lib.rs  main.rs  steps.rs  ui.rs
crates/forge_server/: Cargo.toml  diesel.toml
crates/forge_server/src/: api.rs  app.rs  completion.rs  config.rs  context.rs  dto.rs  error.rs  executor.rs  handler.rs  lib.rs  main.rs  methods.rs  routes.rs  runtime.rs  schema.rs  serialization.rs  server.rs  sse.rs  stream_handler.rs  template.rs
crates/forge_treesitter/: Cargo.toml
crates/forge_treesitter/src/: lib.rs  parser.rs
examples/todo-list-implementation/: Cargo.toml  build.rs
examples/todo-list-implementation/src/: main.rs
forge_main_neo/: Cargo.toml
forge_main_neo/src/: app.rs  executor.rs  lib.rs  main.rs  runtime.rs  state.rs
forge_main_neo/src/domain/: command.rs  message.rs  mod.rs  mode.rs  state.rs
forge_main_neo/src/widgets/: app.rs  mod.rs  shortcuts.rs  state.rs  status.rs  text.rs
(+1255 files in other folders)
