[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Tree-sitter base
tree-sitter = "0.24"

# Tree-sitter languages
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-css = "0.23"
tree-sitter-scala = "0.23"