[package]
name = "forge_main_neo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
color-eyre = "0.6.3"
crossterm = { version = "0.28.1" , features = ["event-stream"]}
forge_api.workspace = true
ratatui = "0.29.0"
tokio.workspace = true
tui-textarea = "0.7.0"
derive_more.workspace = true
forge_tracker.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true
