[package]
name = "forge_anthropic"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"
derive_setters = "0.1.6"
reqwest-eventsource = "0.6.0"
forge_domain = { path = "../forge_domain" }
anyhow = "1.0.75"

[dev-dependencies]
insta = { version = "1.36.1", features = ["json"] }
