[package]
name = "forge_code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
sysinfo = "0.33.1"
tokio = {version = "1.43.0", features = ["macros", "rt", "fs"]}
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.135"
forge_domain = { path = "../forge_domain" }
forge_walker = { path = "../forge_walker" }
async-trait = "0.1.85"
serde = {version = "1.0.217", features = ["derive"]}
urlencoding = "2.1.3"
typed-path = "0.10.0"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.15.0"
