[package]
name = "forge_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
derive_more = { version = "1.0.0-beta.6", features = [
    "from",
    "error",
    "display",
] }
derive_setters = "0.1.6"
handlebars = "6.3.0"
indexmap = "2.7.1"
nom = "8.0.0"
quick-xml = { version = "0.37.2", features = ["serialize"] }
schemars = "0.8.21"
serde = "1.0.217"
serde_json = "1.0.138"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.56"
tokio-stream = "0.1.17"
url = "2.5.4"
uuid = "1.12.1"

[dev-dependencies]
insta = "1.42.1"
pretty_assertions = "1.4.1"
