[package]
name = "forge_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
forge_walker.workspace = true
forge_treesitter.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
derive_setters.workspace = true
glob.workspace = true

tiktoken-rs = "0.7.0"
async-openai = "0.18.0"
cacache = "12.0.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
blake3 = { version = "1.5.0", features = ["std"] }
qdrant-client = {version = "1.14.0", features = ["serde"]}
hnsw_rs = "0.3.1"