[package]
name = "forge_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
dirs = "6.0.0"
dotenv = "0.15.0"
forge_domain = { path = "../forge_domain" }
forge_app = { path = "../forge_app" }
tokio = "1.43.0"
diesel = { version = "2.2.7", features = ["chrono", "r2d2"] }
tokio-retry = "0.3.0"
derive_setters = "0.1.6"
chrono = { version = "0.4.39" }
uuid = "1.13.1"
serde_json = "1.0.138"
