[package]
edition = "2024"
name = "forge_main_neo"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
clap.workspace = true
color-eyre = "0.6.5"
derive_more.workspace = true
edtui = {version = "0.9.6", features = ["mouse-support"]}
forge_api.workspace = true
ratatui = "0.29.0"
tokio-stream.workspace = true
tokio.workspace = true
tui-scrollview = "0.5.1"
# FIXME: add to workspace dependency
async-recursion.workspace = true
chrono.workspace = true
derive_setters.workspace = true
forge_display.workspace = true
forge_tracker.workspace = true
futures.workspace = true
lazy_static.workspace = true
merge.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
throbber-widgets-tui = "0.8.0"
tokio-util = "0.7"
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
