[package]
name = "forge_oauth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example"
path = "src/example.rs"

[dependencies]
anyhow = "1.0.79"
axum = "0.7"
clap = { version = "4.4.18", features = ["derive"] }
openidconnect = "3.5.0"
open = "5.0.1"
reqwest = { version = "0.12.0", features = ["json", "blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tiny_http = "0.12.0"
url = "2.5.0"
tokio = { version = "1.0", features = ["full"] }
