[package]
name = "forge_open_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
async-trait = "0.1.83"
derive_more = { version = "1.0.0", features = ["from", "display"] }
derive_setters = "0.1.6"
reqwest-eventsource = "0.6.0"
moka2 = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
forge_domain = { path = "../forge_domain" }
anyhow = "1.0.75"
thiserror = "2.0.11"