[package]
name = "forge_open_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
futures-util = "0.3"
async-trait = "0.1.83"
forge_domain = { path = "../forge_domain" }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_setters = "0.1.6"


[dev-dependencies]
tokio = "*"