[package]
name = "forge_rag"
version = "0.1.0"
edition = "2021"

[dependencies]
forge_domain = { path = "../forge_domain" }
tower-lsp = "0.20.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
lru = "0.12"
futures = "0.3"
tracing = "0.1"
dashmap = "5.5"
log = "0.4"
walkdir = "2.4"
regex = "1.10"
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
