[package]
name = "forge_repomap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
streaming-iterator = "0.1.9"

# Tree-sitter dependencies
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"

# Internal dependencies
forge_walker = { path = "../forge_walker" }
tokenizers = "0.21.0"
