[package]
name = "forge_repomap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
streaming-iterator = "0.1.9"

# Tree-sitter dependencies
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-php = { workspace = true }

# Internal dependencies
forge_walker = { path = "../forge_walker" }
tokenizers = "0.21.0"