[package]
name = "forge_repomap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
thiserror = "1.0"
tracing = "0.1"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync", "macros", "fs"] }
futures = "0.3"
tree-sitter = { workspace = true }

# Internal dependencies
forge_language = { path = "../forge_language" }
forge_walker = { path = "../forge_walker" }

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
tokio = { version = "1.43.0", features = ["rt", "macros", "fs", "test-util"] }