[package]
name = "forge_review_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
metrics = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
forge_api = { path = "../forge_api" }
forge_domain = { path = "../forge_domain" }
mockall = "0.11"

[dev-dependencies]
tempfile = "3.8"
