[package]
name = "forge_review_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
forge_api.workspace = true
pulldown-cmark = "0.9"
derive_setters.workspace = true
chrono.workspace = true


[dev-dependencies]
tempfile.workspace = true
