[package]
name = "forge_treesitter"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
thiserror.workspace = true
anyhow.workspace = true
blake3 = { version = "1.5.0", features = ["std"] }
serde.workspace = true
pathdiff = "0.2.1"

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true